--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "chrome-extension-boilerplate-react",
+  "name": "easy-youtube-timestamps",
   "version": "4.3.5",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "description": "A chrome extension to easily post a youtube timestamps comment",
   "license": "MIT",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "type": "git"
   },
   "scripts": {
     "build": "node utils/build.js",
@@ -13,7 +12,11 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@hot-loader/react-dom": "^17.0.2",
+    "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0"
