show form skelton when button is clicked

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,6 @@
   "globals": {
     "chrome": "readonly"
   },
-  "semi": "never"
+  "semi": "never",
+  "no-trailing-spaces": ["error", {"skipBlankLines": true}]
 }
