--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_ext_name__",
   "description": "__MSG_ext_desc__",
+  "default_locale": "en",
   "permissions": ["storage", "tabs"],
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
