--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.7",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@hot-loader/react-dom": "^17.0.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.3",
     "framer-motion": "^6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
